--- a/BlogProject/Views/Shared/Components/CommentList/Default.cshtml
+++ b/BlogProject/Views/Shared/Components/CommentList/Default.cshtml
@@ -4,7 +4,7 @@
     @foreach (var item in Model)
     {
         <div class="media">
-            <img src="images/t1.jpg" alt="" class="img-fluid" />
+            <img src="~/Theme/images/t1.jpg" alt="" class="img-fluid" />
             <div class="media-body">
                 <h5 class="mt-0">@item.CommentUserName</h5>
                 <p>
