--- a/BlogProject/Views/Shared/PartialTopbar.cshtml
+++ b/BlogProject/Views/Shared/PartialTopbar.cshtml
@@ -13,7 +13,7 @@
                 </a>
             </span>
             <span>
-                <a href="register.html">
+                <a href="/register/index">
                     <i class="far fa-user"></i> Kayıt Ol!
                 </a>
             </span>
