--- a/BlogProject/Views/Blog/BlogReadAll.cshtml
+++ b/BlogProject/Views/Blog/BlogReadAll.cshtml
@@ -10,12 +10,12 @@
         <div class="row">
             <!--left-->
             <div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
-                
+
                 <div class="blog-grid-top">
                     <div class="b-grid-top">
                         <div class="blog_info_left_grid">
-                            <a href="single.html">
-                                <img src="images/b1.jpg" class="img-fluid" alt="">
+                            <a href="">
+                                <img src="@Model.BlogImage" class="img-fluid" alt="">
                             </a>
                         </div>
                         <div class="blog-info-middle">
@@ -32,7 +32,7 @@
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="far fa-comment"></i> 0 Yorum  
+                                        <i class="far fa-comment"></i> 0 Yorum
                                     </a>
                                 </li>
 
@@ -44,13 +44,13 @@
                         <a href="single.html">@Model.BlogTitle </a>
                     </h3>
                     <p>
-                       @Model.BlogContent
+                        @Model.BlogContent
                     </p>
                     <a href="/Blog/Index" class="btn btn-primary read-m">Blog Listesi</a>
                 </div>
-                @await Component.InvokeAsync("CommentList", new {id=Model.BlogId })
+                @await Component.InvokeAsync("CommentList", new { id = Model.BlogId })
                 @*@await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml")*@
-                @await Html.PartialAsync("~/Views/Comment/PartialAddComment.cshtml");
+                @await Html.PartialAsync("~/Views/Comment/PartialAddComment.cshtml")
             </div>
 
             <!--//left-->
@@ -60,73 +60,9 @@
                     <div class="tech-btm">
                         <img src="images/banner1.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="tech-btm">
-                        <h4>Sign up to our newsletter</h4>
-                        <p>Pellentesque dui, non felis. Maecenas male </p>
-                        <form action="#" method="post">
-                            <input type="email" placeholder="Email" required="">
-                            <input type="submit" value="Subscribe">
-                        </form>
-
-                    </div>
-                    <div class="tech-btm">
-                        <h4>Categories</h4>
-                        <ul class="list-group single">
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Cras justo odio
-                                <span class="badge badge-primary badge-pill">14</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Dapibus ac facilisis in
-                                <span class="badge badge-primary badge-pill">2</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Morbi leo risus
-                                <span class="badge badge-primary badge-pill">1</span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="tech-btm">
-                        <h4>Top stories of the week</h4>
-
-                        <div class="blog-grids row mb-3">
-                            <div class="col-md-5 blog-grid-left">
-                                <a href="single.html">
-                                    <img src="images/1.jpg" class="img-fluid" alt="">
-                                </a>
-                            </div>
-                            <div class="col-md-7 blog-grid-right">
-
-                                <h5>
-                                    <a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-                                </h5>
-                                <div class="sub-meta">
-                                    <span>
-                                        <i class="far fa-clock"></i> 20 Jan, 2018
-                                    </span>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="blog-grids row mb-3">
-                            <div class="col-md-5 blog-grid-left">
-                                <a href="single.html">
-                                    <img src="images/6.jpg" class="img-fluid" alt="">
-                                </a>
-                            </div>
-                            <div class="col-md-7 blog-grid-right">
-                                <h5>
-                                    <a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-                                </h5>
-                                <div class="sub-meta">
-                                    <span>
-                                        <i class="far fa-clock"></i> 20 Feb, 2018
-                                    </span>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
+                    @await Html.PartialAsync("~/Views/SubscribeMail.cshtml") 
+                    @await Component.InvokeAsync("CategoryList")
+                    @await Component.InvokeAsync("WriterLastBlog", new { id = Model.WriterId })
                     <div class="single-gd my-5 tech-btm">
                         <h4>Our Progress</h4>
                         <div class="progress">
@@ -151,7 +87,7 @@
                         </div>
                     </div>
                     <div class="single-gd tech-btm">
-                        <h4>Recent Post</h4>
+                        <h4>Son Eklenen Post</h4>
                         <div class="blog-grids">
                             <div class="blog-grid-left">
                                 <a href="single.html">
