--- a/BlogProject/Views/Comment/PartialAddComment.cshtml
+++ b/BlogProject/Views/Comment/PartialAddComment.cshtml
@@ -1,13 +1,10 @@
 ﻿<div class="comment-top">
     <h4>Yorum Yap</h4>
     <div class="comment-bottom">
-        <form action="#" method="post">
-            <input class="form-control" type="text" name="Name" placeholder="Name" required="">
-            <input class="form-control" type="email" name="Email" placeholder="Email" required="">
-
-            <input class="form-control" type="text" name="Subject" placeholder="Subject" required="">
-
-            <textarea class="form-control" name="Message" placeholder="Message..." required=""></textarea>
+        <form action="/comment/PartialAddComment" method="post">
+            <input class="form-control" type="text" name="CommentUserName" placeholder="Adınız soyadınız" required="">
+            <input class="form-control" type="text" name="CommentTitle" placeholder="Konu" required="">
+            <textarea class="form-control" name="CommentContent" placeholder="Yorumunuz" required=""></textarea>
             <button type="submit" class="btn btn-primary submit">Submit</button>
         </form>
     </div>
